--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ pom.xml.asc
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/**/ClojureProjectResolveSettings.xml
+.idea/**/compiler.xml
+.idea/**/misc.xml
+.idea/**/modules.xml
 
 # Gradle
 .idea/**/gradle.xml
@@ -38,7 +42,7 @@ pom.xml.asc
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
 # .idea/modules.xml
-# .idea/*.iml
+.idea/*.iml
 # .idea/modules
 # *.iml
 # *.ipr
